--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
+:host {
+  display: block;
+}
+
+html {
+  box-sizing: border-box;
+  min-width: 320px;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+*::after, *::before {
+  box-sizing: inherit;
+}
+
+
+body {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1920px;
+  min-width: 320px;
+  height: 100%;
+  font-family: 'Roboto';
+  font-size: 15px;
+  line-height: 1;
+  font-weight: 400;
+  background-color: #fff;
+  color: #adb9ca;
+}
