--- a/src/app/content-head/content-head.component.html
+++ b/src/app/content-head/content-head.component.html
@@ -8,6 +8,6 @@
   </div>
 </div>
 <div class="head-nav">
-    <i class="material-icons">keyboard_arrow_right</i>
+    <i class="material-icons head-nav__icon">keyboard_arrow_right</i>
     <span class="head-nav__text">View details</span>
 </div>
