--- a/src/app/sidebar-user/sidebar-user.component.scss
+++ b/src/app/sidebar-user/sidebar-user.component.scss
@@ -8,6 +8,12 @@
   display: flex;
   align-items: center;
   padding: 20px;
+  transition: .3s;
+  cursor: pointer;
+
+  &:hover {
+    background-color: rgba(55, 67, 85, .5);
+  }
 
   &__icon-wrap {
     position: relative;
@@ -59,7 +65,12 @@
     align-items: center;
     min-height: 40px;
     padding: 9px 30px;
+    transition: .3s;
     cursor: pointer;
+
+    &:hover {
+      background-color: rgba(55, 67, 85, .5);
+    }
   }
 
   &__icon {
@@ -98,6 +109,12 @@
     width: 50%;
     padding: 14px 0;
     color: #adb9ca;
+    transition: .3s;
+    cursor: pointer;
+
+    &:hover {
+      background-color: rgba(55, 67, 85, .5);
+    }
   }
 
   &__out {
@@ -105,7 +122,6 @@
     background-color: inherit;
     border: inherit;
     border-right: 1px solid #54657e;
-    cursor: pointer;
   }
 
   &__settings {
