--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700');
+
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 :host {
@@ -35,6 +37,8 @@ body {
   font-size: 15px;
   line-height: 1;
   font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   background-color: #fff;
   color: #adb9ca;
 }
